# BasicEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  thirdPartyLicenses.txt
assets/shaders/: blend.frag  bloom.frag  cube8m.vert  cubeFromInstances.vert  default.frag  default.vert  flat.frag  flat.vert  gussianBlur.frag
shaders/: triangleFrag.glsl  triangleVert.glsl
src/: CMakeLists.txt  engine.c  engine.h  fileManager.c  fileManager.h  main.c  sceneManager.c  sceneManager.h  shaderManager.c  shaderManager.h  spriteLoader.c  spriteLoader.h  window.c  window.h  windowManager.c  windowManager.h
src/EDC/: edcvec.h
src/core/: CMakeLists.txt  engine.c  engine.h  inputMap.h  keyHandle.c  window.c  window.h
src/edc/: edc_sprite.h  edc_vec.h
src/math/: CMakeLists.txt  linearAlgebra.c  linearAlgebra.h  matrix.c  matrix.h  scaler.c  scaler.h
src/modules/: CMakeLists.txt  scene.h  sceneManager.c
src/modules/io/: CMakeLists.txt  keyHandle.c  keyHandle.h  keys.h  window.c  window.h
src/modules/render/: CMakeLists.txt  camera.c  camera.h  shader.c  shader.h
src/object/: CMakeLists.txt  cuboid.c  transform.h
src/objects/: CMakeLists.txt  cuboid.c  cuboid.h  transform.c  transform.h
src/render/: camera.c  shader.c
src/resource/: CMakeLists.txt  fileManager.h
src/scene/: CMakeLists.txt  sceneManager.c  sceneManager.h
